# zmymingw

./: .gitignore  .gitmodules  .gitpod.Dockerfile  README.md  SECURITY.md  UPDATE_INSTRUCTIONS.txt  build.toml  build_ghaction.toml.in  failing.txt  mapping.toml  options.txt.new  set_up_ghaction.sh  toolchain.cmake  toolchain.x86_64.cmake  update.sh
.github/workflows/: main.yml
archival/bzip2-1.0.6/: Makefile.am  Makefile.in  README.autotools  configure  configure.ac
archival/tar-1.13/: Makefile.orig  Makefile0.sed  ZMY-port  configure_help.txt  makefile.mingw  mkdir.sed  tar-1.13-GnuWin32.diffs
archival/unrar/: makefile
devel/LuaJIT-2.0.5-ported/: Makefile  ZMY-port
devel/binutils-2.29.1/: configure
devel/bison-2.4.1/: ZMY-port
devel/ctags-5.8-ported/: ZMY-port  general.h
devel/flex-2.5.4a/: Makefile.orig  ZMY-port  conf.in
devel/gdbm-1.13/: Makefile.in  aclocal.m4  autoconf.h.in  configure  configure.ac
devel/help2man-1.47.14/: README  configure  help2man-de.info  help2man-es.info  help2man-fr.info  help2man-pl.info  help2man-pt_BR.info  help2man-sv.info  help2man-uk.info  help2man-zh_CN.info  help2man.1  help2man.da.1  help2man.de.1  help2man.el.1  help2man.eo.1  help2man.es.1  help2man.fi.1  help2man.fr.1  help2man.hr.1  help2man.hu.1  help2man.info  help2man.it.1  help2man.ja.1  help2man.nb.1  help2man.pl.1  help2man.pt_BR.1  help2man.ru.1  help2man.sr.1  help2man.sv.1  help2man.ta.1  help2man.uk.1  help2man.vi.1  help2man.zh_CN.1
devel/lua-5.3.4-ported/: Makefile  ZMY-port
devel/nasm-2.14rc15/: nasm.1  nasm.spec  ndisasm.1  version.h  version.mac  version.mak  version.sed
devel/tcc-0.9.26/: Makefile
devel/tcl8.7a1/: tclsh.exe.manifest
libraries/PDCurses-3.4-ported/: ZMY-port
libraries/SDL2-2.0.7-ported/: ZMY-port
libraries/fftw-3.3.8/: FFTW3Config.cmake
libraries/gpgme-1.13.1/: ChangeLog  Makefile.in  configure
libraries/libintl/: Makefile.am  Makefile.in  configure  configure.ac  intl.c  libintl.h
libraries/libmad-0.15.1b/: ZMY-port  configure
libraries/libunistring-0.9.8/: Makefile.in  aclocal.m4  config.h.in  configure
libraries/mingw-libgnurx-2.5.1/: Makefile.in  configure  exec-after_patch-0.cmd  exec-after_patch-1.cmd  exec-after_patch-2.cmd  exec-after_patch-3.cmd  exec-after_patch-4.cmd  exec-after_patch-5.cmd  exec-after_patch-7.cmd
libraries/ntbtls-0.1.2/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
libraries/p11-kit-0.23.2/: Makefile.in  aclocal.m4  config.h.in  configure
user/bc-1.07.1-ported/: ZMY-port
user/bc-1.08.1/: ChangeLog  config.h.in  configure  configure.ac
user/diffutils-3.6-ported/: ZMY-port
user/gnupg-2.2.20/: ChangeLog  Makefile.in  configure
user/grep-3.4/: Makefile.in  aclocal.m4  config.hin  configure
zcbe/: checkninja.sh  fix_cmake_version.sh  gen_mesoncrossfile.sh  gen_toolchainfile.sh  print_version.cmake
zcbe/ImageMagick.zcbe/: build.sh  conf.toml
zcbe/aria2.zcbe/: build.patch  build.sh  conf.toml
zcbe/autoconf.zcbe/: build.sh  conf.toml
zcbe/automake.zcbe/: build.sh  conf.toml
zcbe/bc.zcbe/: build.sh  conf.toml
zcbe/binutils.zcbe/: build.sh  conf.toml
zcbe/bison.zcbe/: build.sh  conf.toml
zcbe/bzip2.zcbe/: Makefile.install  build.sh  conf.toml
zcbe/cairo.zcbe/: build.sh  conf.toml
zcbe/cmake.zcbe/: build.sh  conf.toml
zcbe/ctags.zcbe/: build.sh
zcbe/giflib.zcbe/: Makefile.am  build.sh  conf.toml  configure.ac
zcbe/termcap.zcbe/: Makefile.am  build.sh  conf.toml  configure.ac
(+1347 files in other folders)
