#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([libintl-stub], [0.00], [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE
LT_INIT([win32-dll])
AC_CONFIG_MACRO_DIRS([m4])
AC_CONFIG_SRCDIR([intl.c])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([locale.h stddef.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
